data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_1006.wast
;; 7. **Stack Manipulation Before `unreachable`:**    - **Description:** Perform complex stack manipulations (e.g., `tee_local`, `get_local`, `set_local`) before an `unreachable` instruction to observe stack state preservation upon trap.    - **Constraint:** Ensure the manipulations are valid up to the point of `unreachable`.    - **Relation to Stack Corruption:** Evaluates correctness of stack alterations prior to a trap.

(assert_invalid
  (module
    (func (local i32)
      (i32.const 42)
      (set_local 0)
      (get_local 0)
      (tee_local 0)
      unreachable
      (i32.const 1)
      (drop)
    )
  )
  "type mismatch"
)